--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,3 +5,7 @@ michael:
   password_digest: <%= User.digest('password') %>
 
 
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
